tests/invalid/type/const_missing_init.pts
function main() : void {
  const int x;
}
